components/Header/styles.module.scss
.nav {
  background-color: #0f0f0f;
  z-index: 1;
  display: flex;
  align-items: center;
  justify-content: center;

  .container {
    width: 100%;
    max-width: 1300px;
    height: 100px;

    @media screen and (max-width: 1350px) {
      padding-left: 40px;
      padding-right: 40px;
    }

    .desktop {
      display: flex;
      align-items: center;
      justify-content: space-between;

      .left {
        display: flex;
        align-items: center;
        justify-content: center;
        height: 100px;

        .menu {
          display: flex;
          justify-content: center;
          height: 100px;

          @media screen and (max-width: 800px) {
            display: none;
          }

          .item {
            width: 80px;
            color: white;
            display: flex;
            align-items: center;
            justify-content: center;
            margin-left: 50px;
            height: 100%;
            font-size: 18px;
            cursor: pointer;
            border-bottom: 2px solid transparent;
          }
        }
      }

      .right {
        display: flex;
        align-items: center;
        justify-content: center;
        height: 100px;

        img {
          @media screen and (max-width: 800px) {
            display: none;
          }
        }

        .button {
          cursor: pointer;
          margin-left: 15px;
          padding: 12px 80px;
          border: 1.5px solid rgba(41, 255, 50, 1);
          border-radius: 10px;
          font-size: 20px;
          color: white;
          font-weight: 700;
          cursor: pointer;
          transition: all 0.4s ease-in-out;

          @media screen and (max-width: 800px) {
            display: none;
          }

          &:hover {
            background-color: rgba(41, 255, 50, 1);
            color: black;
          }
        }

        .checkboxMenu {
          display: none;
        }

        .hamburguer {
          cursor: pointer;
          position: relative;
          display: block;
          height: 22px;
          width: 26px;
          display: none;

          @media screen and (max-width: 800px) {
            display: flex;
          }

          span {
            position: absolute;
            display: block;
            height: 3px;
            width: 100%;
            border-radius: 30px;
            background-color: rgba(41, 255, 50, 1);
            transition: 0.5s all ease-in-out;
          }

          span:nth-child(1) {
            top: 0;
          }

          span:nth-child(2) {
            top: 8px;
          }

          span:nth-child(3) {
            top: 16px;
          }
        }
      }
    }

    .mobile {
      display: none;
      align-items: flex-start;
      justify-content: center;
      height: 100%;
      padding-top: 100px;

      @media screen and (min-width: 800px) {
        display: none;
      }

      .menu {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;

        .item {
          width: 100px;
          height: 80px;
          color: white;
          display: flex;
          align-items: center;
          justify-content: center;
          font-size: 22px;
          cursor: pointer;
          border-bottom: 2px solid transparent;
        }
      }

      .wallet {
        width: 250px;
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;
        margin-top: 100px;
        justify-self: center;

        .button {
          cursor: pointer;
          padding: 12px 80px;
          border: 1.5px solid rgba(41, 255, 50, 1);
          border-radius: 10px;
          font-size: 20px;
          color: white;
          font-weight: 700;
          cursor: pointer;
          transition: all 0.4s ease-in-out;
          margin-top: 20px;

          &:hover {
            background-color: rgba(41, 255, 50, 1);
            color: black;
          }
        }
      }

      .button:hover {
        background-color: var(--green);
        color: black;
        animation: fadeIn 1s;
      }
    }
  }
}

@keyframes fadeIn {
  0% { opacity: 0.5; }
  100% { opacity: 1; }
}

